[gd_scene load_steps=9 format=3 uid="uid://bserkpwybsqs2"]

[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/common_components/autoloads/debug/monitor/monitor.gd" id="1_qwrk5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhpxr"]
bg_color = Color(0.368753, 0.368753, 0.368753, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 25.0
expand_margin_top = 25.0
expand_margin_right = 25.0
expand_margin_bottom = 25.0

[sub_resource type="LabelSettings" id="LabelSettings_m5ygy"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6qyih"]
font_color = Color(0, 1, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bmu0k"]
font_color = Color(1, 0.533333, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tmxu2"]
font_color = Color(0.568627, 0.764706, 0.839216, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c2bwy"]
font_color = Color(0.568627, 0.627451, 0.839216, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hhn1s"]
font_color = Color(0.568627, 0.839216, 0.780392, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Monitor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_qwrk5")

[node name="Background" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rhpxr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SYSTEM"
label_settings = SubResource("LabelSettings_m5ygy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="FrameLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Framerate:"
label_settings = SubResource("LabelSettings_6qyih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrameText" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CpuMsLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "CPU:"
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CpuMsText" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GpuMsLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "GPU:"
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GpuMsText" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RamUsageLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "RAM Usage:"
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RamUsageText" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_bmu0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="EngineVersionText" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tmxu2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GraphicsText" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_c2bwy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProcessorText" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_c2bwy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OSText" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_hhn1s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Copy to Clipboard"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
